wp-template/wordpress.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpress:6.5.5-fpm
        resources:
          requests:
            cpu: 100m
            memory: 48Mi
          limits:
            cpu: 200m
            memory: 96Mi
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: www-data
          mountPath: /var/www/html
      - name: nginx
        image: nginx:1.27.0
        resources:
          requests:
            cpu: 50m
            memory: 16Mi
          limits:
            cpu: 100m
            memory: 32Mi
        ports:
        - containerPort: 80
        volumeMounts:
        - name: www-data
          mountPath: /var/www/html
          readOnly: true
        - name: nginx
          mountPath: /etc/nginx/conf.d
          readOnly: true

      volumes:
      - name: www-data
        emptyDir: {}
      - name: wordpress-dotssh
        secret:
          secretName: wordpress-dotssh
          defaultMode: 0600
      - name: nginx
        configMap:
          name: wordpress-nginx
